[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/LevelCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/TileMap/ShipMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/wall_gray.jpg" type="Texture" id=3]
[ext_resource path="res://Items/Bulb/BulbBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Bulb/Bulb.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level3/Level3.gd" type="Script" id=6]

[node name="Level3" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 65535, 6, 0, 0, 1, 0, 1, 4, 0 )

[node name="Sprite" type="Sprite" parent="TileMap"]
position = Vector2( 131.026, 132.549 )
scale = Vector2( 7.37115, 6.72224 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="TileMap"]
margin_left = 77.3902
margin_top = 88.6113
margin_right = 180.39
margin_bottom = 170.611
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Teamwork
is
Z KEY!

(Not by MikeRG)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Starts" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Starts"]
position = Vector2( 364.8, 126.838 )

[node name="Position2D2" type="Position2D" parent="Starts"]
position = Vector2( 131.455, -123.478 )

[node name="LevelCore" parent="." instance=ExtResource( 1 )]

[node name="Bulb" parent="." instance=ExtResource( 5 )]
position = Vector2( 305.336, 102.298 )

[node name="Bulb2" parent="." instance=ExtResource( 5 )]
position = Vector2( 296.841, -41.1718 )

[node name="BulbBase" parent="." instance=ExtResource( 4 )]
position = Vector2( 410.578, -0.112793 )

[node name="BulbBase2" parent="." instance=ExtResource( 4 )]
position = Vector2( -76.1673, 227.131 )
